--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header-container">
         <nav class="nav">
           <div class="logo">
-            <img src="assets/images/logo-white.png" alt="lyft" width="55" class="logo-white" />
+            <a href="#"><img src="assets/images/logo-white.png" alt="lyft" width="55" class="logo-white" /></a>
           </div>
           <ul class="menu">
             <li><a href="#">Drive</a></li>
@@ -26,12 +26,12 @@
           <div class="intro-container">
             <h1 class="intro-title">Turn Miles Into Money</h1>
             <h2 class="intro-subtitle">Sign Up To Drive With Lyft.</h2>
-            <div class="mini-form">
+            <form class="mini-form">
               <input type="text" placeholder="Phone number" />
               <div class="mini-form-btns">
                 <button type="submit" class="intro-btn">Become a driver</button>
                 <a href="#" class="link">Sign up to ride</a>
-              </div>
+              </form>
             </div>
             <div class="intro-txt">
               <p>Already applied? Check the status of your application here.</p>
